--- a/upside-down-tetris/index.html
+++ b/upside-down-tetris/index.html
@@ -13,8 +13,22 @@
             <div id="right-wall"></div>
             <div id="block-area">
                 <!-- ADD YOUR HTML CODE INSIDE OF THIS DIV-->
-
-
+                    <div class="tetris-block coral"></div>
+                    <div class="tetris-block fg"></div>
+                    <div class="tetris-block red"></div>
+                    <div class="tetris-block lav"></div>
+                    <div class="tetris-block so"></div>
+                    <div class="tetris-block red"></div>
+                    <div class="tetris-block red"></div>
+                    <div class="tetris-block lav"></div>
+                    <div class="tetris-block blank"></div>
+                    <div class="tetris-block blank"></div>
+                    <div class="tetris-block coral long"></div>
+                    <div class="tetris-block lav long"></div>
+                    <div class="tetris-block blank"></div>
+                    <div class="tetris-block red"></div>
+                    <div class="tetris-block fg"></div>
+                    <div class="tetris-block coral"></div>
 
 
 
