--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,11 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 21 | Day 4 · 04/04/24</h1>
+                    <h1>Week 21 | Day 5 · 04/05/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning about the Box Model.
+                            Today we'll be learning about Combining
+                            Selectors and Absolute vs Relative Units.
                         </p>
                     </div>
 
@@ -23,23 +24,23 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start off a review Kahoot on CSS
-                                Rules followed by another review Kahoot
-                                on Document Flow and HTML Elements.
+                                We'll start off wiping out our Margin
+                                Drills to complete the box model drillset.
                             </li>
                             <li>
-                                Then we have a powerpoint on the Box
-                                Model followed by a Demo on the Box
-                                Model.
+                                Then we have a demo on Combining Selectors
+                                followed by a Kahoot on CSS Selectors
+                                to English.
                             </li>
                             <li>
-                                After a short break, we have our Padding
-                                Drills followed by our Border Drills.
+                                After a short break, we have our Containers
+                                and Selectors Drills.
                             </li>
                             <li>
-                                Then we'll spend the rest of class
-                                working on the Upside-down Tetris
-                                Exercise.
+                                Then we'll finish off class with a
+                                powerpoint on Responsiveness - Part 1
+                                and a demo on Absolute vs Relative
+                                Units.
                             </li>
                         </ul>
                     </div>
@@ -47,11 +48,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If you were to write a book or script, what
-                            genre would it be?
+                            If you could master the skill of a particular
+                            culinary cuisine, what cuisine would you choose?
                             <span>
                                 <i><br>
-                                    (e.g.: Documentary, Mockumentary, fiction, Comedy, Horror Slasher, Comedy Action, etc.)
+                                    (e.g.: Indian cuisine, Jamaican cuisine, United States Dishwasher Cuisine, etc.)
                                 </i>
                             </span>
                         </p>
@@ -70,14 +71,21 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Our brains are constantly eating themselves.
+                            — Smoking can void your Apple Product Warranties.
+                            <!-- — You can code with just whitespace. -->
                         </p>
                         <p class="additional-info">
-                            It is a process called Phagocytosis where
-                            cells will envelop and consume smaller
-                            cells or molecules in order to remove them
-                            from the system. So, next time you tell someone
-                            they ate, their brain definitely did.
+                            Apple has a policy to safeguard its technicians
+                            from any toxic work environment. This means
+                            Tobacco tars settled on the systems are considered
+                            harmful and Apple can deny servicing your
+                            product even if they are in warranty if
+                            they believe it has come into contact with
+                            tobacco.
+                            <!-- There is a coding languaged called
+                            Whitespace that allows you to code with
+                            just spaces, tabs, and linefeeds. It will
+                            not accept any non-whitespace characters. -->
                         </p>
                     </div>
                 
