--- a/agenda/index.html
+++ b/agenda/index.html
@@ -71,21 +71,13 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Smoking can void your Apple Product Warranties.
-                            <!-- — You can code with just whitespace. -->
+                            — You can code with just whitespace.
                         </p>
                         <p class="additional-info">
-                            Apple has a policy to safeguard its technicians
-                            from any toxic work environment. This means
-                            Tobacco tars settled on the systems are considered
-                            harmful and Apple can deny servicing your
-                            product even if they are in warranty if
-                            they believe it has come into contact with
-                            tobacco.
-                            <!-- There is a coding languaged called
+                            There is a coding languaged called
                             Whitespace that allows you to code with
                             just spaces, tabs, and linefeeds. It will
-                            not accept any non-whitespace characters. -->
+                            not accept any non-whitespace characters.
                         </p>
                     </div>
                 
