--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 21 | Day 5 · 04/05/24</h1>
+                    <h1>Week 22 | Day 1 · 04/08/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning about Combining
-                            Selectors and Absolute vs Relative Units.
+                            Today we'll have the entire day to start
+                            and finish the Generic License Project.
                         </p>
                     </div>
 
@@ -24,23 +24,12 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start off wiping out our Margin
-                                Drills to complete the box model drillset.
+                                We'll start off with a review Kahoot
+                                on English to CSS Selectors.
                             </li>
                             <li>
-                                Then we have a demo on Combining Selectors
-                                followed by a Kahoot on CSS Selectors
-                                to English.
-                            </li>
-                            <li>
-                                After a short break, we have our Containers
-                                and Selectors Drills.
-                            </li>
-                            <li>
-                                Then we'll finish off class with a
-                                powerpoint on Responsiveness - Part 1
-                                and a demo on Absolute vs Relative
-                                Units.
+                                Then we will spend the rest of class
+                                working on the Generic License assignment.
                             </li>
                         </ul>
                     </div>
@@ -48,11 +37,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If you could master the skill of a particular
-                            culinary cuisine, what cuisine would you choose?
+                            Are you a collector of a particular item
+                            or category?
                             <span>
                                 <i><br>
-                                    (e.g.: Indian cuisine, Jamaican cuisine, United States Dishwasher Cuisine, etc.)
+                                    (e.g.: Gemstones, cards, figurines, typewriters, paints, etc.)
                                 </i>
                             </span>
                         </p>
@@ -71,13 +60,16 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — You can code with just whitespace.
+                            — All clownfish are born male and can potentially
+                            change to female.
                         </p>
                         <p class="additional-info">
-                            There is a coding languaged called
-                            Whitespace that allows you to code with
-                            just spaces, tabs, and linefeeds. It will
-                            not accept any non-whitespace characters.
+                            Usually, clownfish live in groups with
+                            a dominant male and female, and then 0-4
+                            juvenile males. When the dominant female
+                            dies, the dominant male changes sex to
+                            become the dominant female and one of the
+                            juveniles become the dominant male.
                         </p>
                     </div>
                 
