--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 22 | Day 1 · 04/08/24</h1>
+                    <h1>Week 22 | Day 2 · 04/09/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll have the entire day to start
-                            and finish the Generic License Project.
+                            Today we'll have a lab day. I'll also be going
+                            over the Generic License Project.
                         </p>
                     </div>
 
@@ -24,12 +24,7 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start off with a review Kahoot
-                                on English to CSS Selectors.
-                            </li>
-                            <li>
-                                Then we will spend the rest of class
-                                working on the Generic License assignment.
+                                We'll spend the entire day in lab time.
                             </li>
                         </ul>
                     </div>
@@ -37,11 +32,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Are you a collector of a particular item
-                            or category?
+                            Do you have a dream home architecture aesthetic? Share a pic
+                            of an example too!
                             <span>
                                 <i><br>
-                                    (e.g.: Gemstones, cards, figurines, typewriters, paints, etc.)
+                                    (e.g.: Modern home, victorian, etc.)
                                 </i>
                             </span>
                         </p>
@@ -60,16 +55,17 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — All clownfish are born male and can potentially
-                            change to female.
+                            — There are non-standard punction marks.
                         </p>
                         <p class="additional-info">
-                            Usually, clownfish live in groups with
-                            a dominant male and female, and then 0-4
-                            juvenile males. When the dominant female
-                            dies, the dominant male changes sex to
-                            become the dominant female and one of the
-                            juveniles become the dominant male.
+                            From the exclamation comma and love point
+                            to the interrobang and friendly period, we
+                            have a small range of punctuation marks that
+                            can add more umph to our sentences.
+                            <a
+                                href="https://progressivepunctuation.com/"
+                                target="_blank">Check them out Here!
+                            </a>
                         </p>
                     </div>
                 
