--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -24,7 +24,7 @@
             <section id="middle">
                 <div class="card-holder">
                     <div class="card">
-                        <p>Working on HTML Potluck Project.</p>
+                        <p>Working on Generic License Project.</p>
                     </div>
                     <div class="card">
                         <p>
@@ -64,9 +64,12 @@
                         Earth Lore:
                     </h2>
                     <p>
-                        The Easter Island Heads also have
-                        torsos. They are either partially or
-                        completely buried.
+                        The interaction of tectonic and the hydrologic
+                        systems cause constant recycling of the materials
+                        within Earth's crust. Rocks are heated, 
+                        metamorphosed, melted, weathered, sediment is 
+                        transported, deposited and lithified, then it 
+                        may be metamorphosed again in yet another cycle.
                     </p>
                 </div>
             </section>
