--- a/license/index.html
+++ b/license/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div id="personal-info">
                         <div id="small-pic">
-                            <img src="images/mii.png">
+                            <img src="images/bey.jpeg">
                         </div>
                         <div id="data-fields">
                             <div id="data-left">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div id="right-side">
-                    <img src="images/mii.png">
+                    <img src="images/bey.jpeg">
                     <div id="donor-and-real-id">
                         <div id="donor">
                             DONOR <i class="fa-solid fa-heart"></i>
