--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 22 | Day 2 · 04/09/24</h1>
+                    <h1>Week 22 | Day 3 · 04/10/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll have a lab day. I'll also be going
-                            over the Generic License Project.
+                            Today is the start of page layouts week. We'll
+                            be learning about single page layouts today.
                         </p>
                     </div>
 
@@ -24,7 +24,24 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll spend the entire day in lab time.
+                                We'll start with Quiz 3 - CSS Fundamentals
+                            </li>
+                            <li>
+                                Then we have a powerpoint on Page Layouts -
+                                Single Column Layouts
+                            </li>
+                            <li>
+                                This is followed by a demo on Single Column
+                                Page layouts
+                            </li>
+                            <li>
+                                After a short break, we'll do our
+                                Single Column Layouts Drills
+                            </li>
+                            <li>
+                                Then we'll spend the rest of class
+                                working on the Product Showcase Site
+                                Exercise.
                             </li>
                         </ul>
                     </div>
