--- a/agenda/index.html
+++ b/agenda/index.html
@@ -49,11 +49,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Do you have a dream home architecture aesthetic? Share a pic
-                            of an example too!
+                            Would you rather need to add 1 cup of salt on everything
+                            you eat or add 1 cup of sugar to everything you eat?
                             <span>
                                 <i><br>
-                                    (e.g.: Modern home, victorian, etc.)
+                                    (e.g.: n/a)
                                 </i>
                             </span>
                         </p>
@@ -72,17 +72,17 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — There are non-standard punction marks.
+                            — Bees can remember human faces.
                         </p>
                         <p class="additional-info">
-                            From the exclamation comma and love point
-                            to the interrobang and friendly period, we
-                            have a small range of punctuation marks that
-                            can add more umph to our sentences.
-                            <a
+                            They are able to pick up on individual
+                            features on human faces and recognize them
+                            during repeat interactions. They retain the
+                            memory for a long period of time.
+                            <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
-                            </a>
+                            </a> -->
                         </p>
                     </div>
                 
