--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,13 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 22 | Day 3 · 04/10/24</h1>
+                    <h1>Week 22 | Day 4 · 04/11/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today is the start of page layouts week. We'll
-                            be learning about single page layouts today.
+                            Today we'll be learning our first CSS layout
+                            module and also one of the best ways to create
+                            layouts in CSS.
                         </p>
                     </div>
 
@@ -24,24 +25,17 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start with Quiz 3 - CSS Fundamentals
+                                We'll start with two powerpoints: Page
+                                Layouts - Two Column Layouts and Flexbox.
                             </li>
                             <li>
-                                Then we have a powerpoint on Page Layouts -
-                                Single Column Layouts
+                                Then we have a demo on creating a Two
+                                Column Page Layout using Flexbox.
                             </li>
                             <li>
-                                This is followed by a demo on Single Column
-                                Page layouts
-                            </li>
-                            <li>
-                                After a short break, we'll do our
-                                Single Column Layouts Drills
-                            </li>
-                            <li>
-                                Then we'll spend the rest of class
-                                working on the Product Showcase Site
-                                Exercise.
+                                After a short break, we'll spend the
+                                rest of class working on the Wiki
+                                with Sidebar exercise.
                             </li>
                         </ul>
                     </div>
@@ -49,11 +43,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Would you rather need to add 1 cup of salt on everything
-                            you eat or add 1 cup of sugar to everything you eat?
+                            If you could do one single practical magic spell,
+                            what would it be?
                             <span>
                                 <i><br>
-                                    (e.g.: n/a)
+                                    (e.g.: Spell to clean entire house, Spell to gain money fast, Spell to revive dead plants, etc.)
                                 </i>
                             </span>
                         </p>
