--- a/agenda/index.html
+++ b/agenda/index.html
@@ -66,13 +66,15 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Bees can remember human faces.
+                            — The sandwich was invented so it's inventor
+                            did not have to leave his gambling table
+                            to eat.
                         </p>
                         <p class="additional-info">
-                            They are able to pick up on individual
-                            features on human faces and recognize them
-                            during repeat interactions. They retain the
-                            memory for a long period of time.
+                            The Earl of Sandwich, John Montagu, who
+                            lived in the 1700s alledgedly invented
+                            the sandwich so he wouldn't have to leave
+                            his gambling table. Make or lose that coin!
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
