--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,13 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 22 | Day 5 · 04/11/24</h1>
+                    <h1>Week 22 | Day 5 · 04/12/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning our first CSS layout
-                            module and also one of the best ways to create
-                            layouts in CSS.
+                            Today we'll be learning our second CSS Module:
+                            CSS Grid.
                         </p>
                     </div>
 
@@ -25,17 +24,19 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start with two powerpoints: Page
-                                Layouts - Two Column Layouts and Flexbox.
+                                We'll start with our Flexbox Drills -
+                                Part 1 exercise.
                             </li>
                             <li>
-                                Then we have a demo on creating a Two
-                                Column Page Layout using Flexbox.
+                                Then we have a powerpoint on CSS Grid.
                             </li>
                             <li>
-                                After a short break, we'll spend the
-                                rest of class working on the Wiki
-                                with Sidebar exercise.
+                                After a short break, we have a demo on
+                                CSS Grid.
+                            </li>
+                            <li>
+                                Then we'll spend the rest of class 
+                                working on Blog with Sidebar exercise.
                             </li>
                         </ul>
                     </div>
@@ -43,11 +44,12 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If you could do one single practical magic spell,
-                            what would it be?
+                            Would you rather take care of an elemental dragon
+                            or giant poisionous toad for a year to earn $250,000
+                            and any home of your choosing for free?
                             <span>
                                 <i><br>
-                                    (e.g.: Spell to clean entire house, Spell to gain money fast, Spell to revive dead plants, etc.)
+                                    (e.g.: pick ONE, not NONE!)
                                 </i>
                             </span>
                         </p>
@@ -66,15 +68,11 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — The sandwich was invented so it's inventor
-                            did not have to leave his gambling table
-                            to eat.
+                            — A fear of long words is called Hippopotomonstrosesquippedaliophobia.
                         </p>
                         <p class="additional-info">
-                            The Earl of Sandwich, John Montagu, who
-                            lived in the 1700s alledgedly invented
-                            the sandwich so he wouldn't have to leave
-                            his gambling table. Make or lose that coin!
+                            That feels like a setup for those who have
+                            that fear.
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
