--- a/demos/two-column-layouts-grid-demo/index.html
+++ b/demos/two-column-layouts-grid-demo/index.html
@@ -18,6 +18,15 @@
                     <li><a href="#">Link 3</a></li>
                     <li><a href="#">Link 4</a></li>
                 </ul>
+                <h2>Other Links</h2>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
+                    <li><a href="#">Link 5</a></li>
+                    <li><a href="#">Link 6</a></li>
+                </ul>
             </div>
 
             <div id="main">
