--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,13 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 22 | Day 5 · 04/12/24</h1>
+                    <h1>Week 23 | Day 1 · 04/15/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning our second CSS Module:
-                            CSS Grid.
+                            Today we'll be learning how to created
+                            a mixed Two Column Layout using
+                            both Flexbox and CSS Grid.
                         </p>
                     </div>
 
@@ -24,19 +25,17 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start with our Flexbox Drills -
-                                Part 1 exercise.
+                                We'll start with our CSS Grid
+                                Drills.
                             </li>
                             <li>
-                                Then we have a powerpoint on CSS Grid.
+                                Then we have a demo on Two Column
+                                Layouts - Mixed.
                             </li>
                             <li>
-                                After a short break, we have a demo on
-                                CSS Grid.
-                            </li>
-                            <li>
-                                Then we'll spend the rest of class 
-                                working on Blog with Sidebar exercise.
+                                After a short break, we'll have
+                                the rest of class to work on the
+                                MeTube exerise.
                             </li>
                         </ul>
                     </div>
@@ -44,12 +43,13 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Would you rather take care of an elemental dragon
-                            or giant poisionous toad for a year to earn $250,000
-                            and any home of your choosing for free?
+                            Would you rather spend two nights
+                            in a haunted castle or underwater
+                            catacomb for 5 million dollars?
+
                             <span>
                                 <i><br>
-                                    (e.g.: pick ONE, not NONE!)
+                                    (e.g.: n/a)
                                 </i>
                             </span>
                         </p>
@@ -68,11 +68,10 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — A fear of long words is called Hippopotomonstrosesquippedaliophobia.
+                            — There’s a planet mostly made from diamond.
                         </p>
                         <p class="additional-info">
-                            That feels like a setup for those who have
-                            that fear.
+                            Called 55 Cancri e, it's around twice the size of Earth and some 40 light-years away from us within the Cancer constellation.
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
