--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -24,7 +24,7 @@
             <section id="middle">
                 <div class="card-holder">
                     <div class="card">
-                        <p>Working on Generic License Project.</p>
+                        <p>Working on Mebay Project.</p>
                     </div>
                     <div class="card">
                         <p>
@@ -64,12 +64,7 @@
                         Earth Lore:
                     </h2>
                     <p>
-                        The interaction of tectonic and the hydrologic
-                        systems cause constant recycling of the materials
-                        within Earth's crust. Rocks are heated, 
-                        metamorphosed, melted, weathered, sediment is 
-                        transported, deposited and lithified, then it 
-                        may be metamorphosed again in yet another cycle.
+                        Coral reefs are Earth's largest living structure.
                     </p>
                 </div>
             </section>
