Two Columns Mixed Demo - Incomplete

--- a/demos/two-column-layout-mixed-demo/index.html
+++ b/demos/two-column-layout-mixed-demo/index.html
@@ -11,7 +11,9 @@
         <div id="grid-layout">
             <div id="header">
                 <h1>
-                    <a href="#">BRAND NAME</a>
+                    <a href="#">
+                        <span id="me">Me</span><span id="tube">Tube</span>
+                    </a>
                 </h1>
             </div>
 
