Two Columns Layouts MIXED

--- a/demos/two-column-layout-mixed-demo/index.html
+++ b/demos/two-column-layout-mixed-demo/index.html
@@ -33,7 +33,84 @@
             </div>
 
             <div id="main">
-                <h2>Main Content Section (replace later)</h2>
+
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9k views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9k views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9k views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9k views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9k views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9k views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
