Two Column Layouts Mixed - Complete

--- a/demos/two-column-layout-mixed-demo/index.html
+++ b/demos/two-column-layout-mixed-demo/index.html
@@ -12,7 +12,7 @@
             <div id="header">
                 <h1>
                     <a href="#">
-                        <span id="me">Me</span><span id="tube">Tube</span>
+                        <span id="me">Birb</span><span id="tube">Tube</span>
                     </a>
                 </h1>
             </div>
@@ -35,7 +35,9 @@
             <div id="main">
 
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
+                    <div class="thumbnail-placeholder">
+                        <img src="images/bluey.jpg" alt="birb video">
+                    </div>
                     <h4><a href="#">MeTube Video Title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
@@ -47,7 +49,7 @@
                     </div>
                 </div>
 
-                <div class="metube-item">
+                <div class="metube-item" id="m2">
                     <div class="thumbnail-placeholder"></div>
                     <h4><a href="#">MeTube Video Title</a></h4>
                     <div class="video-details">
