Side by Side Demo: Media & Text

--- a/demos/side-by-side-demo/index.html
+++ b/demos/side-by-side-demo/index.html
@@ -26,6 +26,38 @@
                 </div>
             </div>
         </div>
-        
+
+        <div id="main-section">
+            <div class="single-column">
+
+                <div class="media-text">
+                    <div class="image-container">
+                        <img
+                            src="images/cool-boxes.webp"
+                            alt="cereal box"
+                        >
+                    </div>
+                    <div class="text-container">
+                        <h3>A whole world of flavor</h3>
+                        <a href="#">HAVE A TASTE</a>
+                    </div>
+                </div>
+
+                <div class="media-text">
+                    <div class="image-container">
+                        <img
+                            src="images/warm-boxes.webp"
+                            alt="cereal box"
+                        >
+                    </div>
+                    <div class="text-container">
+                        <h3>High protein cereal to power your days</h3>
+                        <a href="#">TRY NOW</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </body>
 </html>
