--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,13 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 23 | Day 1 · 04/15/24</h1>
+                    <h1>Week 24 | Day 1 · 04/23/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning how to created
-                            a mixed Two Column Layout using
-                            both Flexbox and CSS Grid.
+                            Today we'll be learning how to make multiple
+                            pages in HTML and how to create heroes.
                         </p>
                     </div>
 
@@ -25,17 +24,15 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start with our CSS Grid
-                                Drills.
+                                We'll start with a powerpoint on Heroes.
                             </li>
                             <li>
-                                Then we have a demo on Two Column
-                                Layouts - Mixed.
+                                Then we have a demo on Heroes.
                             </li>
                             <li>
                                 After a short break, we'll have
                                 the rest of class to work on the
-                                MeTube exerise.
+                                Three Heroes exercise.
                             </li>
                         </ul>
                     </div>
@@ -46,7 +43,6 @@
                             Would you rather spend two nights
                             in a haunted castle or underwater
                             catacomb for 5 million dollars?
-
                             <span>
                                 <i><br>
                                     (e.g.: n/a)
