Heroes Demo: Cat Hero

--- a/demos/heroes-demo/cat-hero.html
+++ b/demos/heroes-demo/cat-hero.html
@@ -17,9 +17,9 @@
             </div>
         </div>
 
-        <div id="plant-hero">
+        <div id="cat-hero">
             <div class="container">
-                <h1>We Make Plant<br>Care Easy</h1>
+                <h1>It's A Cat's World</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur 
                     adipisicing elit.
