Heroes Demo: Linking index.html to cat-hero.html

--- a/demos/heroes-demo/index.html
+++ b/demos/heroes-demo/index.html
@@ -10,10 +10,10 @@
     <body>
         <div id="header">
             <div class="nav container">
-                <a href="#">Shop</a>
-                <a href="#">Classes</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="cat-hero.html">Shop</a>
+                <a href="cat-hero.html">Classes</a>
+                <a href="cat-hero.html">About</a>
+                <a href="cat-hero.html">Contact</a>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
                     Lorem ipsum dolor sit amet, consectetur 
                     adipisicing elit.
                 </p>
-                <a href="#" class="btn">Shop Products</a>
+                <a href="cat-hero.html" class="btn">Shop Products</a>
             </div>
         </div>
 
