--- a/demos/heroes-demo/cat-hero.html
+++ b/demos/heroes-demo/cat-hero.html
@@ -4,16 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Heroes Demo</title>
+        <title>Heroes Demo - Cat Hero</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="header">
             <div class="nav container">
-                <a href="#">Shop</a>
-                <a href="#">Classes</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="extra-heroes.html">Shop</a>
+                <a href="extra-heroes.html">Classes</a>
+                <a href="extra-heroes.html">About</a>
+                <a href="extra-heroes.html">Contact</a>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
                     Lorem ipsum dolor sit amet, consectetur 
                     adipisicing elit.
                 </p>
-                <a href="#" class="btn">Shop Products</a>
+                <a href="extra-heroes.html" class="btn">Shop Products</a>
             </div>
         </div>
 
