--- a/demos/heroes-demo/index.html
+++ b/demos/heroes-demo/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Heroes Demo</title>
+        <title>Heroes Demo - Plant Hero</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
