--- a/demos/heroes-demo/extra-heroes.html
+++ b/demos/heroes-demo/extra-heroes.html
@@ -33,6 +33,8 @@
             </div>
         </div>
 
+        <div class="spacer"></div>
+
         <div id="hero-4">
             <div class="hero-content">
                 <h2>Make a Wish</h2>
