--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 24 | Day 1 · 04/23/24</h1>
+                    <h1>Week 24 | Day 2 · 04/24/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning how to make multiple
-                            pages in HTML and how to create heroes.
+                            Today we'll be learning how to make galleries
+                            content layouts.
                         </p>
                     </div>
 
@@ -24,15 +24,15 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start with a powerpoint on Heroes.
+                                We'll start with a demo on galleries.
                             </li>
                             <li>
-                                Then we have a demo on Heroes.
+                                Then we have a powerpoint on galleries.
                             </li>
                             <li>
                                 After a short break, we'll have
                                 the rest of class to work on the
-                                Three Heroes exercise.
+                                Themed Gallery Page Exercise.
                             </li>
                         </ul>
                     </div>
@@ -40,9 +40,8 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Would you rather spend two nights
-                            in a haunted castle or underwater
-                            catacomb for 5 million dollars?
+                            What is your biggest pet peeve when browsing
+                            the internet?
                             <span>
                                 <i><br>
                                     (e.g.: n/a)
@@ -64,10 +63,10 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — There’s a planet mostly made from diamond.
+                            — Over her lifetime, a cat called Dusty had
+                            a total of 420 kittens.
                         </p>
                         <p class="additional-info">
-                            Called 55 Cancri e, it's around twice the size of Earth and some 40 light-years away from us within the Cancer constellation.
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
